...
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/myThingsButton"
                android:layout_width="156dp"
                android:layout_height="50dp"
                android:background="@drawable/square_button_blue"
                android:fontFamily="serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
...
